fix text and arrow on mobile home

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -57,7 +57,7 @@
   height: 33vh;
   bottom: 0;
   font-family: "Sk-Modernist-Bold";
-  font-size: 3vw;
+  font-size: 2.9vw;
   color: #757575;
   overflow: hidden;
 }
@@ -83,7 +83,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-40%);
-  width: 160vw;
+  width: 170vw;
   opacity: 0.8;
 }
 
@@ -112,7 +112,7 @@
 
 
 .home__description div span{
-  font-size: 3.5vw;
+  font-size: 3.3vw;
   text-transform: uppercase;
   color: white;
 }
